--- a/src/view/v_shedule.module.css
+++ b/src/view/v_shedule.module.css
@@ -9,3 +9,11 @@
 .VSheduleEntryBox {
   border: solid 1px;
 }
+.VSheduleEntryBtns {
+  display: block;
+  float: right;
+}
+.VSheduleEntryBtn {
+  padding: 2px 2px;
+  margin-left: 5px;
+}
