--- a/src/view/v_tabssection.module.css
+++ b/src/view/v_tabssection.module.css
@@ -1,4 +1,9 @@
 .VTabsSection {
-    display: block;
-    margin-bottom: '1rem'
-  }
+  display: flex;
+  justify-content: flex-start;
+  flex-wrap: wrap;
+  min-width: 220px;
+  vertical-align: top;
+  margin: 2px;
+  border: dotted 1px gray;
+}
