--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,93 @@
-div {
-  border: none 1px;
+/* fonts */
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+h1 {
+  font-family: 'Roboto', sans-serif;
+  font-weight: 400;
+  font-style: normal;
+  font-size: 1.4em;
 }
+h2 {
+  font-family: 'Roboto', sans-serif;
+  font-weight: 600;
+  font-style: normal;
+  font-size: 1em;
+}
+h3 {
+  font-family: 'Roboto', sans-serif;
+  font-weight: 400;
+  font-style: normal;
+  font-size: 1em;
+}
+h4 {
+  font-family: 'Roboto', sans-serif;
+  font-weight: 400;
+  font-style: normal;
+  font-size: 0.8em;
+}
+h5 {
+  font-family: 'Roboto', sans-serif;
+  font-weight: 400;
+  font-style: normal;
+  font-size: 0.7em;
+}
+h6 {
+  font-family: 'Roboto', sans-serif;
+  font-weight: 400;
+  font-style: normal;
+  font-size: 0.6em;
+}
+
+/* макет */
+div {
+  border: solid 1px black;
+  margin: 1px;
+  padding: 1px;
+}
+.wrapperH {
+  display: flex;
+}
+.headerIcon {
+  display: inline-block;
+  width: 50px;
+  min-width: 50px;
+  height: 50px;
+  background-color: lightblue;
+}
+.headerNav {
+  display: inline-block;
+}
+.headerNavBtn {
+  display: inline-block;
+  width: 110px;
+  background-color: lightgreen;
+}
+.wrapper {
+  display: flex;
+}
+.wrapperL {
+  display: inline-block;
+}
+.wrapperС {
+  display: inline-block;
+}
+.wrapperR {
+  display: inline-block;
+}
+.objList {
+  flex: auto;
+}
+.obj {
+  display: inline-block;
+  width: 200px;
+  background-color: lightyellow;
+}
+.side {
+  width: 200px;
+  height: 200px;
+}
+
+/* filter */
+
 .inputFilter {
   border: 1px solid #ccc;
   border-radius: 5px;
@@ -19,15 +106,4 @@ progress {
 }
 .clearfix {
   clear: both;
-}
-.wrapper {
-  display: flex;
-  justify-content: flex-end;
-  flex-flow: row nowrap;
-}
-.wrapperCenter {
-  display: flexbox;
-}
-.wrapperRight {
-  display: flexbox;
 }
