--- a/src/view/v_placeinfo.module.css
+++ b/src/view/v_placeinfo.module.css
@@ -1,55 +1,37 @@
-* {
-  margin: 0;
-  padding: 0;
-  font-family: sans-serif;
-}
-
 .VPlaceInfo {
-  display: inline-flex;
   border: 1px;
   border-radius: 5px;
   list-style: none;
-  padding: 10px;
+  padding: 5px;
   margin: 10px 10px 10px 10px;
-  width: 400px;
+  width: 200px;
   background: #fff;
   box-shadow: 0 5px 25px rgba(0, 0, 0, 0.1);
   transition: transform 0.5s;
   user-select: none;
 }
 .VPlaceInfo:hover {
-  transform: scale(1.1);
+  transform: scale(1.05);
   z-index: 5;
-  background: #25bcff;
+  background: #2185b0;
   box-shadow: 0 5px 25px rgba(0, 0, 0, 0.2);
   color: #fff;
   opacity: 1;
 }
 
 .VPlaceInfoImg {
-  width: 200px;
-  margin: 2px 4px 2px 2px;
+  width: 190px;
+  margin: 0;
   border-radius: 15px;
 }
 .VPlaceInfoText {
   border: none;
 }
-.VPlaceInfo h1 {
+.VPlaceInfo h2 {
   text-align: center;
-  font-size: 12px;
-  font-weight: 600;
   border-bottom: 1px solid gray;
 }
-.VPlaceInfo h2 {
-  text-align: left;
-  font-size: 9px;
-  font-weight: 100;
-  line-height: normal;
-  border-bottom: 1px dashed gray;
-}
 .VPlaceInfo h3 {
-  text-align: center;
-  font-size: 7px;
-  font-weight: 100;
-  line-height: normal;
+  text-align: left;
+  border-bottom: 1px dashed gray;
 }
