--- a/src/view/v_outfit.module.css
+++ b/src/view/v_outfit.module.css
@@ -1,7 +1,30 @@
 .VOutfit {
+  display: inline-block;
+  text-align: center;
   border: dotted 1px black;
   margin: 2px;
+  min-width: 56px;
+  min-height: 90px;
 }
-.VOutfitEntryBox {
-  border: solid 1px black;
+.VOutfit:hover {
+  transform: scale(1.1);
+  z-index: 5;
+  background: #25bcff;
+  box-shadow: 0 5px 25px rgba(0, 0, 0, 0.2);
+  color: #fff;
+  opacity: 1;
+}
+.VOutfitEmpty {
+  text-align: center;
+  width: 46px;
+  height: 46px;
+  border: solid 1px gray;
+  border-radius: 5px;
+  background-color: lightgray;
+}
+
+.VOutfitImg {
+  display: block;
+  width: 44px;
+  border-radius: 5px;
 }
